[package]
name = "gajibot-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
poise = "0.6.1"
reqwest = { version = "0.12.15", features = ["rustls-tls"] }
scraper = "0.23.1"
shuttle-runtime = "0.53.0"
shuttle-serenity = "0.53.0"
tokio = "1.26.0"
tracing = "0.1.37"

[dependencies.serenity]
version = "0.12.0"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
